Add single post information

--- a/practicas/blog/css/style.css
+++ b/practicas/blog/css/style.css
@@ -10,6 +10,7 @@ body, html {
 /* Contenedor principal */
 .main-content {
     flex: 1; /* Ocupa el espacio disponible */
+    min-height: calc(100vh - 80px - 60px);
 }
 
 /* Fondo y estilos de la página */
